--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,17 @@
-@import-normalize; /* bring in normalize.css styles */
+/* @import-normalize; bring in normalize.css styles */
+@import '../node_modules/modern-normalize/modern-normalize.css';
+
+:root {
+  --primary-white: #ffffff;
+  --primary-black: #000814;
+  --main-background: #001d3d;
+  --secondary-background: #e7ecef;
+}
 
 body {
-  margin: 0;
+    background-color: var(--primary-white);
+  color: var(--primary-black);
+  letter-spacing: .03em; 
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -12,4 +22,25 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+ul {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  cursor: pointer;
+  color: currentColor;
+}
+
+* {  
+  margin: 0;
+  padding: 0;
 }
