--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -108,7 +108,16 @@
   }
 }
 
-.accentItem {
+.projectInfoTitle {
+  margin-bottom: 5px;
+  text-transform: uppercase;
+}
+
+.projectFeatures {
+  margin-bottom: 10px;
+}
+
+.projectAccentItem {
   font-weight: 500;
 }
 
@@ -129,7 +138,15 @@
   margin-bottom: 10px;
 }
 
+.roleName {
+  font-weight: 500;
+}
 
+.roleDescription {
+  &:not(:last-child) {
+    margin-bottom: 5px;
+  }
+}
 
 .visuallyHidden {
   position: absolute;
