--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   --primary-black: #000814;
   --main-background: #001d3d;
   --secondary-background: #e7ecef;
+  --link-color: #8d99ae;
 }
 
 body {
