--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -1,5 +1,6 @@
 .main {
   display: flex;
+  flex-direction: row-reverse;
   margin: 0 auto;
   width: 1200px;
   -webkit-box-shadow: -13px 1px 52px -18px rgba(0, 0, 0, 0.71);
@@ -14,6 +15,38 @@
   color: var(--primary-white);
   border-top-right-radius: 60px;
   border-bottom-right-radius: 60px;
+}
+
+.address {
+  font-style: normal;
+  color: var(--link-color);
+  margin-bottom: 20px;
+}
+
+.socialLinkList {
+  display: flex;
+}
+
+.socialLinkItem {
+  &:not(:last-child) {
+    margin-right: 20px;
+  }
+}
+
+.socialLink {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--link-color);
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+
+  & > svg {
+    width: 20px;
+    height: 20px;
+    fill: var(--main-background);
+  }
 }
 
 .mainContent {
