--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -41,11 +41,17 @@
   border-radius: 50%;
   width: 40px;
   height: 40px;
+  transition: background-color var(--hover-transition);
 
   & > svg {
     width: 20px;
     height: 20px;
     fill: var(--main-background);
+  }
+
+  &:hover,
+  &:focus {
+    background-color: var(--primary-white);
   }
 }
 
@@ -155,6 +161,12 @@
 .projectLink {
   text-decoration: underline;
   text-decoration-skip-ink: none;
+  transition: color var(--hover-transition);
+
+  &:hover,
+  &:focus {
+    color: var(--link-color);
+  }
 }
 
 .position {
@@ -195,4 +207,10 @@
 
 .contactLink {
   color: var(--link-color);
+  transition: color var(--hover-transition);
+
+  &:hover,
+  &:focus {
+    color: var(--primary-white);
+  }
 }
