--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   --main-background: #001d3d;
   --secondary-background: #e7ecef;
   --link-color: #8d99ae;
+  --hover-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
