--- a/src/index.css
+++ b/src/index.css
@@ -7,13 +7,13 @@
   --main-background: #001d3d;
   --secondary-background: #e7ecef;
   --link-color: #8d99ae;
-  --hover-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  --hover-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
-    background-color: var(--primary-white);
+  background-color: var(--primary-white);
   color: var(--primary-black);
-  letter-spacing: .03em; 
+  letter-spacing: 0.03em;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -24,6 +24,11 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+* {
+  margin: 0;
+  padding: 0;
 }
 
 img {
@@ -40,9 +45,4 @@ a {
   text-decoration: none;
   cursor: pointer;
   color: currentColor;
-}
-
-* {  
-  margin: 0;
-  padding: 0;
 }
